# storage/api-docs/api-docs.json
@@ -22,7 +22,7 @@
                                         "data": {
                                             "type": "object",
                                             "example": {
-                                                "name": "ANTON",
+                                                "name": "Anton",
                                                 "email": "anton.fullstack@gmail.com",
                                                 "updated_at": "2024-02-03T16:53:20.000000Z",
                                                 "created_at": "2024-02-03T16:53:20.000000Z",
@@ -35,7 +35,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ]
             }
         },
         "/api/login": {
@@ -111,7 +116,12 @@
                             }
                         }
                     }
-                }
+                },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ]
             }
         },
         "/api/register": {
@@ -164,7 +174,7 @@
                                         "data": {
                                             "type": "object",
                                             "example": {
-                                                "name": "ANTON",
+                                                "name": "Anton",
                                                 "email": "anton.fullstack@gmail.com",
                                                 "updated_at": "2024-02-03T16:53:20.000000Z",
                                                 "created_at": "2024-02-03T16:53:20.000000Z",
